--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,20 +1,22 @@
-# Exercise: Config and Deployment
-configure_infrastructure: 
-  docker:
-    - image: python:3.7-alpine3.11
-  steps:
-    - checkout
-    - add_ssh_keys:
-            # You can get this ID in the section where you registered the SSH Key
-            fingerprints: ["b0:12:c2:f9:b5:ee:9f:0c:8f:f4:dc:f4:bc:61:cb:14"] 
-    - run:
-        name: Install Ansible
-        command: |
-          apk add --update ansible
-    - run:
-        name: Run Playbook and Configure server
-        command: |
-          ansible-playbook -i inventory.txt main.yml -v
+version: 2.1
+jobs:  
+  # Exercise: Config and Deployment
+  configure_infrastructure: 
+    docker:
+      - image: python:3.7-alpine3.11
+    steps:
+      - checkout
+      - add_ssh_keys:
+              # You can get this ID in the section where you registered the SSH Key
+              fingerprints: ["b0:12:c2:f9:b5:ee:9f:0c:8f:f4:dc:f4:bc:61:cb:14"] 
+      - run:
+          name: Install Ansible
+          command: |
+            apk add --update ansible
+      - run:
+          name: Run Playbook and Configure server
+          command: |
+            ansible-playbook -i inventory.txt main.yml -v
 workflows:
   # Name the workflow "welcome"
   my_workflow:
